Name:               snaplet-simple-log
Version:            0.1.2
Synopsis:           Simple log for Haskell in Snaplet
License:            BSD3
Author:             Alexandr `Voidex` Ruchkin
Homepage:           http://github.com/mvoidex/snaplet-simple-log
Maintainer:         voidex@live.com
Category:           Logging
Build-type:         Simple
Cabal-version:      >= 1.6
Tested-with:        GHC == 7.6.1

Library
  HS-Source-Dirs: src
  Build-Depends:
    base                >= 4.0,
    data-lens-template  >= 2.1 && < 2.2,
    mtl                 >= 2.0 && < 2.2,
    simple-log          >= 0.1.6 && < 0.2,
    snap                >= 0.8 && < 0.10,
    snap-core           >= 0.8 && < 0.10,
    transformers        >= 0.2 && < 0.4
  Exposed-Modules:
    Snap.Snaplet.SimpleLog
